Fix gap between card contents and font-size of author name

--- a/styles.css
+++ b/styles.css
@@ -36,13 +36,13 @@ body {
 
 .card-image img{
   width: 100%;
-  border-radius: 1rem;
+  border-radius: 0.75rem;
 }
 
 .card-content {
   display: flex;
   flex-direction: column;
-  gap: 1.25rem;
+  gap: .75rem;
 }
 
 .card-content .category {
@@ -80,5 +80,6 @@ body {
   height: 2rem;
 }
 .card-author p {
+  font-size: 0.875rem;
   font-weight: 800;
 }
